# dialop

./: .gitignore  main.py  pyproject.toml  req_that_work.txt  requirements.txt
analysis/: benchmark.py  benchmark_simple.py
dialop/: constants.py  evaluate.py  players.py  test_selfplay.py
dialop/prompts/: optimization.txt
dialop/train/: Llama 3.1 8b Unsloth Finetuning.ipynb  data.py  lora.py  qlora.py
