[project]
name = "dialop"
version = "0.1.0"
description = "The DialOp environments for collaborative dialogue."
readme = "README.md"
requires-python = ">=3.9,<4.0"
authors = [
    { name = "Jessy Lin", email = "jessy81697@gmail.com" },
]
dependencies = [
    "numpy",
    "scipy",
    "pyparsing",
    "python-dateutil",
    "rich",
    "tiktoken",
    "tyro",
    "thefuzz",
    "openai",
    "fire>=0.7.1",
    "flask>=2.2.2",
    "ruamel-yaml>=0.17.21",
    "torch>=2.8.0",
]

[project.optional-dependencies]
apps = [
    "Flask==2.2.2",
    "Flask-SocketIO==5.3.2",
    "Jinja2==3.1.2",
    "ruamel.yaml==0.17.21",
    "Werkzeug==2.2.2",
    "boto3==1.26.69",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["dialop*"]

[tool.uv.workspace]
members = [
    ".",
]

[tool.uv.sources]
dialop = { workspace = true }

[dependency-groups]
dev = [
    "dialop",
]
