[project]
name = "dialop"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.3.0",
    "fire>=0.7.1",
    "flask>=3.1.2",
    "openai>=2.7.2",
    "rich>=14.2.0",
    "ruamel-yaml>=0.18.16",
    "scipy>=1.16.3",
    "torch>=2.8.0",
    "tqdm>=4.67.1",
    "tyro>=0.9.35",
    "unsloth>=2025.11.2",
    "unsloth-zoo>=2025.11.3",
    "wandb>=0.23.0",
    "weave>=0.52.16",
]
