[project]
name = "dialop"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.11.0",
    "bitsandbytes==0.48.2",
    "cut-cross-entropy==25.1.1",
    "datasets>=4.3.0",
    "fire>=0.7.1",
    "flask>=3.1.2",
    "hf-transfer>=0.1.9",
    "huggingface-hub>=0.36.0",
    "openai>=2.7.2",
    "peft>=0.17.1",
    "rich>=14.2.0",
    "ruamel-yaml>=0.18.16",
    "scipy>=1.16.3",
    "sentencepiece>=0.2.1",
    "torch>=2.6.0",
    "tqdm>=4.67.1",
    "triton>=3.2.0",
    "trl==0.15.2",
    "tyro>=0.9.35",
    "unsloth==2025.2.15",
    "unsloth-zoo==2025.2.7",
    "wandb>=0.23.0",
    "weave>=0.52.16",
    "xformers==0.0.29.post3",
]
